--- a/local/build.gradle
+++ b/local/build.gradle
@@ -38,4 +38,6 @@ dependencies {
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
+
+    implementation 'com.github.aakumykov:storage_access_helper:2.0.0-alpha'
 }
