--- a/settings.gradle
+++ b/settings.gradle
@@ -21,7 +21,7 @@ dependencyResolutionManagement {
 }
 
 rootProject.name = "file_lister_navigator_selector_2"
-include ':app'
 include ':lib'
 include ':local'
 include ':yandex_disk'
+include ':file_lister_navigator_selector_demo'
