--- a/local/build.gradle
+++ b/local/build.gradle
@@ -32,12 +32,17 @@ android {
 dependencies {
 
     api project(':lib')
+
     implementation libs.androidx.core.ktx
     implementation libs.androidx.appcompat
     implementation libs.material
+
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
 
     implementation 'com.github.aakumykov:storage_access_helper:2.0.0-alpha'
+
+    implementation("com.github.aakumykov:cloud_reader_2:3.1.0-alpha")
+    implementation("com.github.aakumykov:cloud_writer_2:3.1.0-alpha")
 }
