--- a/yandex_disk/build.gradle
+++ b/yandex_disk/build.gradle
@@ -32,10 +32,18 @@ android {
 dependencies {
 
     api project(':lib')
+
     implementation libs.androidx.core.ktx
     implementation libs.androidx.appcompat
     implementation libs.material
+
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
+
+    // TODO: избавиться от этой библиотеки
+    api 'com.github.aakumykov:yandex_disk_client:0.0.21'
+
+    implementation("com.github.aakumykov:cloud_reader_2:3.1.0-alpha")
+    implementation("com.github.aakumykov:cloud_writer_2:3.1.0-alpha")
 }
