Настройка публикации; v5.0.0-alpha, versionCode 32

--- a/local/build.gradle
+++ b/local/build.gradle
@@ -1,10 +1,25 @@
 plugins {
     alias(libs.plugins.android.library)
     alias(libs.plugins.jetbrains.kotlin.android)
+    id 'maven-publish'
+}
+
+project.ext {
+    artifactId = 'local_file_lister_navigator_selector'
+    groupId = 'com.github.aakumykov'
+
+    majorVersionNum = commonMajorVersionNumber
+    minorVersionNum = commonMinorVersionNumber
+    patchVersionNum = commonPatchVersionNumber
+    suffix = commonVersionSuffix
+
+    versionCode = commonVersionCode
+
+    versionName = majorVersionNum + "." + minorVersionNum + "." + patchVersionNum + "-" + suffix
 }
 
 android {
-    namespace 'com.github.aakumykov.local_file_lister_navigator_selector'
+    namespace groupId + '.' + artifactId
     compileSdk 34
 
     defaultConfig {
@@ -27,6 +42,11 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    publishing {
+        singleVariant('release') {
+            withSourcesJar()
+        }
+    }
 }
 
 dependencies {
@@ -45,4 +65,17 @@ dependencies {
 
     implementation("com.github.aakumykov:cloud_reader_2:3.1.0-alpha")
     implementation("com.github.aakumykov:cloud_writer_2:3.1.0-alpha")
+}
+
+publishing {
+    publications {
+        release(MavenPublication) {
+            groupId = project.groupId
+            artifactId = project.artifactId
+            version = versionName
+            afterEvaluate {
+                from components.release
+            }
+        }
+    }
 }
