--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -1,10 +1,25 @@
 plugins {
     alias(libs.plugins.android.library)
     alias(libs.plugins.jetbrains.kotlin.android)
+    id 'maven-publish'
+}
+
+project.ext {
+    artifactId = 'file_lister_navigator_selector'
+    groupId = 'com.github.aakumykov'
+
+    majorVersionNum = commonMajorVersionNumber
+    minorVersionNum = commonMinorVersionNumber
+    patchVersionNum = commonPatchVersionNumber
+    suffix = commonVersionSuffix
+
+    versionCode = commonVersionCode
+
+    versionName = majorVersionNum + "." + minorVersionNum + "." + patchVersionNum + "-" + suffix
 }
 
 android {
-    namespace 'com.github.aakumykov.file_lister_navigator_selector'
+    namespace groupId + '.' + artifactId
     compileSdk 34
 
     defaultConfig {
@@ -29,6 +44,11 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    publishing {
+        singleVariant('release') {
+            withSourcesJar()
+        }
+    }
 }
 
 dependencies {
@@ -47,4 +67,17 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.10.1'
 
     api 'com.github.aakumykov:extensible_sorting_comparator:0.0.2'
+}
+
+publishing {
+    publications {
+        release(MavenPublication) {
+            groupId = project.groupId
+            artifactId = project.artifactId
+            version = versionName
+            afterEvaluate {
+                from components.release
+            }
+        }
+    }
 }
