--- a/yandex_disk/build.gradle
+++ b/yandex_disk/build.gradle
@@ -64,8 +64,8 @@ dependencies {
     // TODO: избавиться от этой библиотеки
     api 'com.github.aakumykov:yandex_disk_client:0.0.21'
 
-    implementation("com.github.aakumykov:cloud_reader_2:3.1.0-alpha")
-    implementation("com.github.aakumykov:cloud_writer_2:3.1.0-alpha")
+    api "com.github.aakumykov:cloud_reader_2:3.1.0-alpha"
+    api "com.github.aakumykov:cloud_writer_2:3.1.0-alpha"
 }
 
 publishing {
