--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -60,7 +60,7 @@ dependencies {
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
 
-    implementation 'androidx.fragment:fragment-ktx:1.7.0'
+    api 'androidx.fragment:fragment-ktx:1.7.0'
 
     implementation 'com.github.aakumykov:exception_utils:0.4'
 
