Модуль storage_selector.

--- a/settings.gradle
+++ b/settings.gradle
@@ -26,3 +26,4 @@ include ':lib'
 include ':local'
 include ':yandex_disk'
 include ':file_lister_navigator_selector_demo'
+include ':storage_selector'
