--- a/settings.gradle
+++ b/settings.gradle
@@ -27,3 +27,4 @@ include ':local'
 include ':yandex_disk'
 include ':file_lister_navigator_selector_demo'
 include ':storage_selector'
+include ':storage_lister'
