--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -56,7 +56,7 @@ dependencies {
     implementation libs.androidx.core.ktx
     implementation libs.androidx.appcompat
     implementation libs.material
-    implementation project(':storage_selector')
+    api project(':storage_lister')
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
@@ -68,8 +68,6 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.10.1'
 
     api 'com.github.aakumykov:extensible_sorting_comparator:0.0.2'
-
-    implementation "com.github.aakumykov:android_storage_lister:0.0.5-alpha"
 }
 
 publishing {
