--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -68,6 +68,8 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.10.1'
 
     api 'com.github.aakumykov:extensible_sorting_comparator:0.0.2'
+
+    implementation "com.github.aakumykov:list_holding_list_adapter:0.0.3-alpha"
 }
 
 publishing {
