--- a/local/src/main/AndroidManifest.xml
+++ b/local/src/main/AndroidManifest.xml
@@ -6,4 +6,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" tools:ignore="ScopedStorage" />
 
+    <application
+        android:requestLegacyExternalStorage="true" />
+
 </manifest>
