--- a/local/build.gradle
+++ b/local/build.gradle
@@ -63,7 +63,8 @@ dependencies {
 
     implementation 'com.github.aakumykov:storage_access_helper:2.0.0-alpha'
 
-    api("com.github.aakumykov:cloud_reader_2:3.1.0-alpha")
+    api("com.github.aakumykov:local_cloud_reader:3.2.0-alpha")
+
     api("com.github.aakumykov:cloud_writer_2:3.1.0-alpha")
 }
 
