--- a/yandex_disk/build.gradle
+++ b/yandex_disk/build.gradle
@@ -64,7 +64,8 @@ dependencies {
     // TODO: избавиться от этой библиотеки
     api 'com.github.aakumykov:yandex_disk_client:0.0.21'
 
-    api "com.github.aakumykov:cloud_reader_2:3.1.0-alpha"
+    api "com.github.aakumykov:yandex_disk_cloud_reader:3.2.0-alpha"
+
     api "com.github.aakumykov:cloud_writer_2:3.1.0-alpha"
 }
 
