--- a/storage_lister/build.gradle
+++ b/storage_lister/build.gradle
@@ -2,10 +2,25 @@ plugins {
     alias(libs.plugins.android.library)
     alias(libs.plugins.jetbrains.kotlin.android)
     id 'kotlin-parcelize'
+    id 'maven-publish'
+}
+
+project.ext {
+    artifactId = 'storage_lister'
+    groupId = 'com.github.aakumykov'
+
+    majorVersionNum = commonMajorVersionNumber
+    minorVersionNum = commonMinorVersionNumber
+    patchVersionNum = commonPatchVersionNumber
+    suffix = commonVersionSuffix
+
+    versionCode = commonVersionCode
+
+    versionName = majorVersionNum + "." + minorVersionNum + "." + patchVersionNum + "-" + suffix
 }
 
 android {
-    namespace 'com.github.aakumykov.storage_lister'
+    namespace groupId + '.' + artifactId
     compileSdk 34
 
     defaultConfig {
@@ -28,6 +43,11 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    publishing {
+        singleVariant('release') {
+            withSourcesJar()
+        }
+    }
 }
 
 dependencies {
@@ -40,4 +60,17 @@ dependencies {
     androidTestImplementation libs.androidx.espresso.core
 
     api "com.github.aakumykov:android_storage_lister:4.0.0-alpha"
+}
+
+publishing {
+    publications {
+        release(MavenPublication) {
+            groupId = project.groupId
+            artifactId = project.artifactId
+            version = versionName
+            afterEvaluate {
+                from components.release
+            }
+        }
+    }
 }
