--- a/yandex_disk/build.gradle
+++ b/yandex_disk/build.gradle
@@ -62,7 +62,7 @@ dependencies {
     androidTestImplementation libs.androidx.espresso.core
 
     // TODO: избавиться от этой библиотеки
-    api 'com.github.aakumykov:yandex_disk_client:0.0.22'
+    api 'com.github.aakumykov:yandex_disk_client:0fb74b646b'
 
     api "com.github.aakumykov:cloud_reader_2:3.1.0-alpha"
     api "com.github.aakumykov:cloud_writer_2:3.1.0-alpha"
