Обновил всё кроме yandex auth sdk, по рекомендации Студии; перешёл на libs.versions.toml

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,20 +1,32 @@
 [versions]
-agp = "8.5.0"
-kotlin = "1.9.0"
-coreKtx = "1.13.1"
+agp = "8.6.1"
+authsdk = "3.0.0"
+cloud_reader_x = "4.0.0-alpha"
+cloud_writer_x = "7.4.0-alpha"
+kotlin = "2.0.21"
+coreKtx = "1.16.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 appcompat = "1.7.0"
 material = "1.12.0"
+preferenceKtx = "1.2.1"
+storage_access_helper = "2.0.0-alpha"
+yandex_disk_client = "0.0.22"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-preference-ktx = { module = "androidx.preference:preference-ktx", version.ref = "preferenceKtx" }
+authsdk = { module = "com.yandex.android:authsdk", version.ref = "authsdk" }
+cloud_writer_x = { module = "com.github.aakumykov:cloud_writer_2", version.ref = "cloud_writer_x" }
+cloud_reader_x = { module = "com.github.aakumykov:cloud_reader_2", version.ref = "cloud_reader_x" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
+storage_access_helper = { module = "com.github.aakumykov:storage_access_helper", version.ref = "storage_access_helper" }
+yandex_disk_client = { module = "com.github.aakumykov:yandex_disk_client", version.ref = "yandex_disk_client" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
