--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,12 @@ plugins {
 
 android {
     namespace 'com.github.aakumykov.file_lister_navigator_selector_demo'
-    compileSdk 34
+    compileSdk 35
 
     defaultConfig {
         applicationId "com.github.aakumykov.file_lister_navigator_selector_demo"
         minSdk 21
-        targetSdk 34
+        targetSdk 35
         versionCode 1
         versionName "1.0"
 
@@ -47,9 +47,9 @@ dependencies {
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
 
-    implementation 'com.github.aakumykov:storage_access_helper:2.0.0-alpha'
+    implementation libs.storage.access.helper
 
-    implementation 'androidx.preference:preference:1.2.1'
+    implementation libs.androidx.preference.ktx
 
-    implementation 'com.yandex.android:authsdk:3.0.0'
+    implementation libs.authsdk
 }
