--- a/local/build.gradle
+++ b/local/build.gradle
@@ -20,7 +20,7 @@ project.ext {
 
 android {
     namespace groupId + '.' + artifactId
-    compileSdk 34
+    compileSdk 35
 
     defaultConfig {
         minSdk 21
@@ -61,10 +61,10 @@ dependencies {
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
 
-    implementation 'com.github.aakumykov:storage_access_helper:2.0.0-alpha'
+    implementation libs.storage.access.helper
 
-    api("com.github.aakumykov:cloud_reader_2:3.1.0-alpha")
-    api("com.github.aakumykov:cloud_writer_2:3.1.0-alpha")
+    api(libs.cloud.reader.x)
+    api(libs.cloud.writer.x)
 }
 
 publishing {
