Revert "Обновил всё кроме yandex auth sdk, по рекомендации Студии; перешёл на libs.versions.toml"
This reverts commit 271196137f1004a1b31fcae2c9927263474f166c.

--- a/local/build.gradle
+++ b/local/build.gradle
@@ -20,7 +20,7 @@ project.ext {
 
 android {
     namespace groupId + '.' + artifactId
-    compileSdk 35
+    compileSdk 34
 
     defaultConfig {
         minSdk 21
@@ -61,10 +61,10 @@ dependencies {
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
 
-    implementation libs.storage.access.helper
+    implementation 'com.github.aakumykov:storage_access_helper:2.0.0-alpha'
 
-    api(libs.cloud.reader.x)
-    api(libs.cloud.writer.x)
+    api("com.github.aakumykov:cloud_reader_2:3.1.0-alpha")
+    api("com.github.aakumykov:cloud_writer_2:3.1.0-alpha")
 }
 
 publishing {
