--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,12 @@ plugins {
 
 android {
     namespace 'com.github.aakumykov.file_lister_navigator_selector_demo'
-    compileSdk 35
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.github.aakumykov.file_lister_navigator_selector_demo"
         minSdk 21
-        targetSdk 35
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -47,9 +47,9 @@ dependencies {
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
 
-    implementation libs.storage.access.helper
+    implementation 'com.github.aakumykov:storage_access_helper:2.0.0-alpha'
 
-    implementation libs.androidx.preference.ktx
+    implementation 'androidx.preference:preference:1.2.1'
 
-    implementation libs.authsdk
+    implementation 'com.yandex.android:authsdk:3.0.0'
 }
