--- a/yandex_disk/build.gradle
+++ b/yandex_disk/build.gradle
@@ -20,7 +20,7 @@ project.ext {
 
 android {
     namespace groupId + '.' + artifactId
-    compileSdk 35
+    compileSdk 34
 
     defaultConfig {
         minSdk 21
@@ -62,10 +62,10 @@ dependencies {
     androidTestImplementation libs.androidx.espresso.core
 
     // TODO: избавиться от этой библиотеки
-    api libs.yandex.disk.client
+    api 'com.github.aakumykov:yandex_disk_client:0.0.22'
 
-    api libs.cloud.reader.x
-    api libs.cloud.writer.x
+    api "com.github.aakumykov:cloud_reader_2:3.1.0-alpha"
+    api "com.github.aakumykov:cloud_writer_2:3.1.0-alpha"
 }
 
 publishing {
