implementation 'com.github.aakumykov:yandex_disk_client:0.0.24'; v12.0.0-alpha, versionCode 54

--- a/yandex_disk/build.gradle
+++ b/yandex_disk/build.gradle
@@ -62,7 +62,7 @@ dependencies {
     androidTestImplementation libs.androidx.espresso.core
 
     // TODO: избавиться от этой библиотеки
-    api 'com.github.aakumykov:yandex_disk_client:0.0.23'
+    implementation 'com.github.aakumykov:yandex_disk_client:0.0.24'
 
     api "com.github.aakumykov:cloud_reader_2:4.0.0-alpha"
     api "com.github.aakumykov:cloud_writer_2:7.4.0-alpha"
