--- a/storage_lister/build.gradle
+++ b/storage_lister/build.gradle
@@ -59,7 +59,7 @@ dependencies {
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
 
-    api "com.github.aakumykov:android_storage_lister:4.0.0-alpha"
+    api libs.android.storage.lister
 }
 
 publishing {
