--- a/yandex_disk/build.gradle
+++ b/yandex_disk/build.gradle
@@ -61,8 +61,8 @@ dependencies {
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
 
-    api "com.github.aakumykov:cloud_reader_2:4.1.0-alpha"
-    api "com.github.aakumykov:cloud_writer_2:7.4.0-alpha"
+    api libs.cloud.reader.x
+    api libs.cloud.writer.x
 }
 
 publishing {
