fix: изменил поведение: если изначальный каталог не читается, получение рекрусивного списка выбрасывает исключение; v16.0.0-alpha, versionCode 59

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,7 @@ dependencies {
     implementation 'androidx.preference:preference:1.2.1'
 
     implementation libs.authsdk
+
+    androidTestImplementation libs.kaspresso
+    androidTestUtil libs.androidx.orchestrator
 }
